# kafka-images-streaming

./: 20240916_pymongo_check.ipynb  20240916_viz_img.ipynb  README.md  docker-compose.yml  pyproject.toml
kafka_images_streaming/: docker-compose.yml  image_data_consumer.py  image_data_generator.py  image_data_model.py  utils.py
tests/: test_image_data_model.py
